# TerKet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  check_gates.py  check_rcs_gates.py  check_solver_config.py  check_sqiswap.py  check_sxdg.py  pyproject.toml  requirements.txt  run_53q.py  setup.py
benchmarks/: README.md  __init__.py  amplitude_post_elimination_tensor_rcs.py  curated_benchmark.py  depth_scaling_head_to_head.py  probability_native_rcs.py  quimb_head_to_head.py  rcs_import_strategy_probe.py  run_benchmarks.py  structured_showcase.py
docs/: design.md
notebooks/: README.md  terket_demo.ipynb
scripts/: simulate_observable.py
src/terket/: __init__.py  _schur_native.c  _schur_native_algebra.c  _schur_native_algebra.inc  _schur_native_dp.c  _schur_native_dp.inc  _schur_native_graph.c  _schur_native_graph.inc  _schur_native_internal.h  _schur_native_support.c  _schur_native_support.inc  backends.py  benchmarking.py  circuit_io.py  circuit_spec.py  circuits.py  cubic_arithmetic.py  engine.py  head_to_head_cases.py  phase3.py  probability_native.py  q3free.py  schur_engine.py  structured_cases.py
src/terket/benchmarking/: __init__.py  common.py  head_to_head_cases.py  structured_cases.py
tests/: test_benchmarks.py  test_phase_structure_optimizer.py  test_post_elimination_tensor_rcs.py  test_probability_native.py  test_q3free_normal_form_rewrite.py  test_q3free_one_shot_slicing.py  test_q3free_treewidth_native.py  test_qiskit_native_import.py  test_rz_native.py
tools/: profile_rcs_old_vs_new.py  try_cirq_to_qasm.py
